[Android][Test] Add account rename test with multiple account change events
This CL adds an account rename test when multiple account change events
exist for the old account.

Bug: 1152460
Change-Id: I272d5c8f4f573806b1974956d7c2123cd6882096
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2807277
Commit-Queue: Alice Wang <aliceywang@chromium.org>
Reviewed-by: Tanmoy Mollik <triploblastic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#870901}